syntax = "proto3";

package customer;

service CustomersService {
  rpc GetCustomerById (GetCustomerByIdRequest) returns (GetCustomerByIdResponse) {}
  rpc GetCustomersByIds (GetCustomersByIdsRequest) returns (GetCustomersByIdsResponse) {}
  rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerResponse) {}

}

message Customer {
  string id = 1;
  string name = 2;
}

message GetCustomerByIdRequest {
  string id = 1;
}
message GetCustomerByIdResponse {
  Customer customer = 1;
}

message GetCustomersByIdsRequest {
  repeated string ids = 1;
}
message GetCustomersByIdsResponse {
  repeated Customer customers = 1;
}

message CreateCustomerRequest {
  string name = 1;
}
message CreateCustomerResponse {
  Customer customer = 1;
}