syntax = "proto3";

package organization;

service OrganizationesService {
  rpc FindOne (OrganizationById) returns (Organization) {}
}

message OrganizationById {
  int32 id = 1;
}

message Organization {
  int32 id = 1;
  string name = 2;
}